--- a/STAT331_Final_Project.qmd
+++ b/STAT331_Final_Project.qmd
@@ -10,9 +10,7 @@ self-contained: true
 
 Quarto enables you to weave together content and executable code into a finished document. To learn more about Quarto see <https://quarto.org>.
 
-## Running Code
-
-When you click the **Render** button a document will be generated that includes both content and the output of embedded code. You can embed code like this:
+## Load the data
 
 ```{r}
 library(tidyverse)
@@ -21,5 +19,11 @@ child_mortality_data <- read.csv(here::here("child_mortality_0_5_year_olds_dying
 
 CO2_emissions_data <- read.csv(here::here("co2_pcap_cons.csv"))
 
+
+```
+
+## Pivot the Data
+
+```{r}
 
 ```
