--- a/STAT331_Final_Project.qmd
+++ b/STAT331_Final_Project.qmd
@@ -26,19 +26,19 @@ co2_pcap_cons <- read.csv(here::here("co2_pcap_cons.csv"))
 
 ```{r}
 co2_long <- co2_pcap_cons %>%
-  mutate(across(matches("^X(18|19|20)\\d{2}$"), as.character)) %>% # Convert year columns to character
+  mutate(across(matches("^X(18|19|20)\\d{2}$"), as.character)) %>% 
   pivot_longer(
-    cols = matches("^X(18|19|20)\\d{2}$"), # This regex matches years 1800-2099
+    cols = matches("^X(18|19|20)\\d{2}$"), 
     names_to = "year",
     values_to = "emissions"
   )
 
-co2_long
-
 co2_long <- co2_long %>%
-  mutate(year = str_remove(year, "^X"))
+  mutate(year = str_remove(year, "^X")) |>
+  mutate(year = as.numeric(year))
+
+co2_long
 ```
 
 ```{r}
 ```
-
