--- a/STAT331_Final_Project.qmd
+++ b/STAT331_Final_Project.qmd
@@ -48,9 +48,15 @@ child_mort_long <- child_mortality_data %>%
     values_to = "child_mortality"
   )
 
-child_mort_long
-
 child_mort_long <- child_mort_long %>%
   mutate(year = str_remove(year, "^X")) |>
   mutate(year = as.numeric(year))
 ```
+
+## Join the data
+
+```{r}
+final_data <- child_mort_long %>%
+  inner_join(co2_long, by = c("year", "country"))
+```
+
