--- a/STAT331_Final_Project-datadescription.qmd
+++ b/STAT331_Final_Project-datadescription.qmd
@@ -94,14 +94,41 @@ summary_table
 
 ```{r}
 ggplot(summary_table, aes(x = mean_emissions, y = mean_child_mortality)) +
-  geom_point() +  # This adds the scatter plot points
-  theme_minimal() +  # Optional: This gives a minimalistic theme to the plot
-  labs(x = "Mean Emissions", y = "Mean Child Mortality", 
+  geom_point() + 
+  theme_bw() +
+  labs(x = "Mean Emissions", y = "", 
        title = "Scatter Plot of Mean Child Mortality vs Mean Emissions by Country") +
   geom_smooth(method = "lm", se = FALSE, color = "blue") +
-  scale_x_log10()  # Transforms the x-axis to a log10 scale
+  scale_x_log10()
+
+```
+## Over time
+```{r}
+yearly_mean_child_mortality <- final_data %>%
+  group_by(year) %>%
+  summarise(
+    mean_child_mortality = mean(child_mortality, na.rm = TRUE),
+    mean_emissions = mean(emissions, na.rm = TRUE)
+  ) %>% 
+  ggplot(mapping = aes(x = year)) +
+  geom_line(aes(y = mean_child_mortality, color = "blue")) +
+  labs(x = "Year", y = "Mean Child Mortality", title = "Global Yearly Trends") +
+  theme_bw()
+
+yearly_mean_emissions <- final_data %>%
+  group_by(year) %>%
+  summarise(
+    mean_child_mortality = mean(child_mortality, na.rm = TRUE),
+    mean_emissions = mean(emissions, na.rm = TRUE)
+  ) %>% 
+  ggplot(mapping = aes(x = year)) +
+  geom_line(aes(y = mean_emissions, color = "red")) +
+  labs(x = "Year", y = "Mean Emissions", title = "Global Yearly Trends") +
+  theme_bw()
 
 
+yearly_mean_child_mortality
+yearly_mean_emissions
 ```
 
 ## References
