Added commentary on R-squared

--- a/STAT331_Final_Project-datadescription.qmd
+++ b/STAT331_Final_Project-datadescription.qmd
@@ -116,7 +116,6 @@ yearly_means <- final_data %>%
   )
 ```
 
-
 ```{r}
 #| fig-height: 20
 final_data <- final_data %>%
@@ -137,8 +136,8 @@ final_data %>%
 ```
 
 ## Linear Model
-Our explanatory variable is `mean_emissions`, and our response variable is `mean_child_mortality`.
 
+Our explanatory variable is `mean_emissions`, and our response variable is `mean_child_mortality`.
 
 ```{r}
 final_data_lm <- lm(mean_child_mortality ~ mean_emissions, data = yearly_means)
@@ -161,6 +160,8 @@ ggplot(aes(x = .fitted, y = .resid)) +
   geom_point()
 ```
 
+The Adjusted R-squared was 0.9476 for the data indicating that close to 95% of the variability in mean child mortality can be explained by mean CO2 emissions. This indicates that the model is a very good fit for the data. The only issue is the plot of the residuals, since the residuals do not have a random distribution and seem to follow a pattern. This could indicate that the relationship between CO2 emissions and child mortality is non-linear and could lead to issues with other tests on the data.
+
 ```{r}
 # Augment the model data
 augmented_data <- augment(final_data_lm)
@@ -182,7 +183,6 @@ variance_summary <- tibble(
 print(variance_summary)
 
 ```
-
 
 ## References
 
