model simulation started

--- a/STAT331_Final_Project-datadescription.qmd
+++ b/STAT331_Final_Project-datadescription.qmd
@@ -199,6 +199,19 @@ print(variance_summary)
 
 ```
 
+```{r}
+
+predictions <- predict(final_data_lm)
+resid_st_error <- sigma(final_data_lm)
+
+predictions_w_errors <- predictions + rnorm(length(predictions), mean = 0, sd = resid_st_error)
+
+
+#We need to generate the same plot with the predictiosn w/ erros as in check point 2
+
+```
+
+
 ## References
 
 Ranganathan et al., 2015 https://www.nature.com/articles/palcomms201533
