--- a/STAT331_Final_Project-datadescription.qmd
+++ b/STAT331_Final_Project-datadescription.qmd
@@ -2,6 +2,11 @@
 title: "STAT331_Final_Project"
 author: "Justus Nunez, Daniel Alvarez, Matt Babb, Maya Doitch"
 format: html
+output:
+  html_document:
+    toc: true
+    toc_float: true
+    toc_depth: 3
 editor: visual
 self-contained: true
 code-fold: true
