Rewrote code for long data into singular pipelines

--- a/STAT331_Final_Project-datadescription.qmd
+++ b/STAT331_Final_Project-datadescription.qmd
@@ -58,11 +58,11 @@ co2_long <- co2_pcap_cons %>%
     cols = matches("^X(18|19|20)\\d{2}$"), 
     names_to = "year",
     values_to = "emissions"
+  ) %>%
+  mutate(
+    year = str_remove(year, "^X"),
+    year = as.numeric(year)
   )
-
-co2_long <- co2_long %>%
-  mutate(year = str_remove(year, "^X")) |>
-  mutate(year = as.numeric(year))
 
 ```
 
@@ -74,11 +74,11 @@ child_mort_long <- child_mortality_data %>%
     cols = matches("^X(18|19|20|21)\\d{2}$"), 
     names_to = "year",
     values_to = "child_mortality"
+  ) %>%
+  mutate(
+    year = str_remove(year, "^X"),
+    year = as.numeric(year)
   )
-
-child_mort_long <- child_mort_long %>%
-  mutate(year = str_remove(year, "^X")) |>
-  mutate(year = as.numeric(year))
 
 ```
 
